samples/_failures_safe/1761288974_fe9fd0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15a8bd36.c: In function ‘main’:
./samples/SAFE/__tmp_15a8bd36.c:153:27: error: expected ‘;’ at end of input
  153 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_15a8bd36.c:153:21: error: expected declaration or statement at end of input
  153 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_15a8bd36.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15a8bd36.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15a8bd36.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15a8bd36.c:153:21: error: expected declaration or statement at end of input
